--- a/app/scss/config/_global.scss
+++ b/app/scss/config/_global.scss
@@ -1,55 +1,16 @@
-body {
-	min-height: 100vh;
+.wrapper {
 	display: flex;
 	flex-direction: column;
-}
-.footer {
-	margin-top: auto;
-}
-.main {
-	@extend %inter;
-	font-size: 16px;
+	min-height: 100%;
 }
 .container {
-	max-width: 1280px + 30px;
+	max-width: 1340px + 30px;
 	margin: 0 auto;
 	padding: 0 15px;
 }
-
-h1 {
-	@extend %sen;
-	font-size: 48px;
-	line-height: 64px;
-	color: #232536;
+.main {
+	flex: 1 0 auto;
 }
-h2 {
-	@extend %sen;
-	font-size: 36px;
-	line-height: 48px;
-	color: #232536;
-	letter-spacing: -2px;
-}
-h3 {
-	@extend %sen;
-	font-size: 28px;
-	line-height: 36px;
-	color: #232536;
-}
-h4 {
-	@extend %sen;
-	font-size: 24px;
-	line-height: 32px;
-	color: #232536;
-}
-h5 {
-	@extend %sen;
-	font-size: 20px;
-	line-height: 32px;
-	color: #232536;
-}
-h6 {
-	@extend %sen;
-	font-size: 16px;
-	line-height: 24px;
-	color: #232536;
+.footer {
+	flex: 0 0 auto;
 }
