--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -7,675 +7,197 @@
 @import "config/media";
 
 .header {
-	background-color: #232536;
-	&__inner {
+	border: 1px solid #979797;
+	background: radial-gradient(100% 100% at 52.01% 53.93%, rgba(255, 255, 255, 9e-6) 0%, rgba(0, 0, 0, 0.045) 100%),
+		#f4f4f4;
+	&__top {
+		margin-top: 75px;
+		margin-bottom: 170px;
 		display: flex;
 		justify-content: space-between;
-		align-items: center;
 	}
-	&__menu {
-		display: flex;
-		color: #ffffff;
-	}
-	&__menu-list {
+	&__content {
 		display: flex;
 		align-items: center;
+		background-image: url(../images/main-logo.svg);
+		background-repeat: no-repeat;
+		background-position: center 190px;
+		background-size: 100% auto;
 	}
-	&__menu-item {
-		border-bottom: 1px solid inherit;
-		@extend %inter;
-		font-size: 16px;
-		& + .header__menu-item {
-			margin-left: 25px;
-		}
-		&:hover {
-			border-bottom: 1px solid #ffffff;
-		}
+	&__content-title {
+		font-family: "Akronim";
+		font-size: 3rem;
+		max-width: 310px;
+		line-height: 55px;
+		color: #7a797a;
+		margin-right: 105px;
 	}
-	&__menu-btn {
-		margin-top: 12px;
-		margin-bottom: 12px;
-		margin-left: 30px;
-		padding: 15px 48px;
-		background-color: #fff;
-		&:hover {
-			background-color: rgb(199, 196, 196);
+	&__content-images {
+		img {
+			height: auto;
+			width: 100%;
+			max-width: 574px;
 		}
-	}
-	&__menu-btn-link {
-		color: #232536;
-		font-size: 18px;
-		@extend %sen;
 	}
 }
-.footer {
-	background-color: #232536;
-	&__menu {
-		padding: 60px 0;
-		color: #fff;
+.potted {
+	position: relative;
+	display: flex;
+	margin-top: -2px;
+	background-color: #4a4a4a;
+	max-height: 795px;
+	&__slider-item {
+		display: flex !important;
+		padding-top: 140px;
 	}
-	.header__menu-item {
-		border-bottom: none;
+	&__slider-images {
+		max-width: 640px;
 	}
 	&__box {
-		background-color: rgba(255, 255, 255, 0.05);
-		padding: 0 60px;
-		margin-bottom: 50px;
-		display: flex;
+		padding-top: 55px;
+		margin-left: 140px;
+		max-width: 433px;
 	}
 	&__box-title {
-		padding: 80px 0;
-		max-width: 560px;
+		font-family: "WorkSans";
+		font-size: 5.0625rem;
+		line-height: 100px;
+		letter-spacing: 18.9844px;
 		color: #ffffff;
-	}
-	&__form {
-		padding-top: 85px;
-		padding-left: 60px;
-		input {
-			color: #fff;
-		}
-	}
-	&__form-input {
-		width: 320px;
-		height: 55px;
-		background-color: inherit;
-		color: #6d6e76;
-		font-size: 16px;
-		@extend %inter;
-		border: 1px solid #4c4c4c;
-		padding: 15px;
-	}
-	&__form-btn {
-		@extend %btn;
-		margin-left: 15px;
-	}
-	&__info {
-		display: flex;
-		justify-content: space-between;
-		padding-bottom: 55px;
-		align-items: center;
-	}
-	&__info-contacts {
-		font-size: 16px;
-		line-height: 28px;
-		color: #ffffff;
-		opacity: 0.7;
-		@extend %inter;
-	}
-	&__info-link {
-		& + .footer__info-link {
-			margin-left: 25px;
-		}
-	}
-	&__info-tel {
-		padding-left: 10px;
-	}
-}
-.display {
-	margin-bottom: 130px;
-	position: relative;
-	height: 720px;
-	background: radial-gradient(30.56% 76.04% at 74.58% 0%, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.6) 100%),
-		url(../images/bg/bg.jpg);
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
-	&__inner {
-		padding-top: 125px;
-		color: #ffffff;
-	}
-	&__inner-post {
-		padding-bottom: 25px;
-		text-transform: uppercase;
-		letter-spacing: 3px;
-		span {
-			@extend %sen;
-			font-size: 18px;
-		}
-	}
-	&__box-title {
-		padding-bottom: 30px;
-		max-width: 835px;
-		@extend %sen;
-		letter-spacing: -2px;
-		color: #ffffff;
-		font-size: 56px;
-		line-height: 64px;
-	}
-	&__author-date {
-		padding-bottom: 20px;
-		display: flex;
-		a {
-			color: #ffd050;
-		}
-	}
-	&__author-posts {
-		font-family: "Inter-Medium";
-		font-weight: 500;
-		padding-right: 10px;
-		position: relative;
-		&::after {
-			content: "";
-			position: absolute;
-			right: 0;
-			top: 3px;
-			width: 1px;
-			height: 11px;
-			background-color: #4c4c4c;
-		}
-		a {
-			color: #592ea9;
-		}
-	}
-	&__author {
-		padding-right: 10px;
-		border-right: 1px solid #fff;
-	}
-	&__date {
-		padding-left: 10px;
 	}
 	&__box-text {
-		line-height: 28px;
-		max-width: 600px;
-		padding-bottom: 50px;
+		font-family: "MuktaVaani";
+		font-size: 1.5rem;
+		line-height: 35px;
+		color: #ffffff;
+		text-align: justify;
 	}
-	&__btn {
-		margin-bottom: 30px;
-		@extend %btn;
-		position: relative;
-		&::after {
-			content: "";
-			position: absolute;
-			height: 11px;
-			width: 11px;
-			right: 25px;
-			top: 23px;
-			background-image: url(../images/icon/btn-right.svg);
-		}
+	&__slider-button {
+		padding: 15px 0px;
+		margin-top: 320px;
 	}
-}
-.posts {
-	margin-bottom: 150px;
-	&__inner {
-		display: flex;
-	}
-	&__one {
-		padding: 30px;
-		border: 1px solid rgba(109, 110, 118, 0.1);
-		max-width: 724px;
-		margin-right: 35px;
-	}
-	&__featured-title {
-		padding-bottom: 30px;
-	}
-	&__one-images {
-		padding-bottom: 45px;
-		img {
-			width: 669px;
-			height: 352px;
-			object-fit: cover;
-		}
-	}
-	&__one-title {
-		max-width: 670px;
-		letter-spacing: -1px;
-		padding-bottom: 25px;
-	}
-	&__one-text {
-		max-width: 551px;
-		color: #6d6e76;
-		margin-bottom: 70px;
-		line-height: 28px;
-	}
-	&__btn {
-		padding-bottom: 30px;
-	}
-	&__btn-link {
-		@extend %btn;
-		position: relative;
-		&::after {
-			content: "";
-			position: absolute;
-			height: 11px;
-			width: 11px;
-			right: 25px;
-			top: 23px;
-			background-image: url(../images/icon/btn-right.svg);
-		}
-	}
-}
-.posts-aside {
-	max-width: 571px;
-	&__top {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		padding-bottom: 35px;
-	}
-	&__item {
-		width: 517px;
-		padding: 35px 0 25px 35px;
-	}
-	&__item--bg {
-		background-color: #fbf6ea;
-	}
-	&__title {
-		max-width: 370px;
-	}
-	&__link {
-		color: #592ea9;
-		&:hover {
-			border-bottom: 1px solid #592ea9;
-		}
-	}
-}
-.about {
-	padding-bottom: 130px;
-	&__inner {
-		position: relative;
-		display: flex;
-		gap: 80px;
-		padding-left: 80px;
-		background-color: #f4f0f8;
-		height: 500px;
-		&::after {
-			content: "";
-			position: absolute;
-			width: 780px;
-			height: 23px;
-			background-color: #ffd050;
-			top: -23px;
-			right: 287px;
-		}
-		&::before {
-			content: "";
-			position: absolute;
-			width: 290px;
-			height: 23px;
-			background-color: #592ea9;
-			right: 0px;
-			top: -23px;
-		}
-	}
-	&__item {
-		padding-top: 100px;
-		max-width: 520px;
-	}
-	&__title {
-		color: #232536;
-		letter-spacing: 3px;
-		text-transform: uppercase;
-		font-family: "Inter-Medium";
-		padding-bottom: 25px;
-	}
-	&__subtitle {
-		padding-bottom: 15px;
-	}
-	&__subtitle--two {
-		line-height: 40px;
-	}
-	&__text {
-		line-height: 28px;
-		padding-bottom: 15px;
-	}
-	&__link {
-		color: #592ea9;
-		@extend %sen;
-		position: relative;
-		&::after {
-			content: "";
-			position: absolute;
-			height: 11px;
-			width: 11px;
-			right: -15px;
-			top: 6px;
-			background-image: url(../images/icon/btn-right.svg);
-		}
-	}
-}
-.category {
-	padding-bottom: 130px;
-	&__content {
-		display: flex;
-		gap: 32px;
-	}
-	&__title {
-		text-align: center;
-		padding-bottom: 50px;
-		letter-spacing: -2px;
-	}
-	&__content-item {
-		padding: 95px 30px 30px 30px;
-		width: 300px;
-		height: 230px;
-		border: 1px solid rgba(109, 110, 118, 0.3);
-		position: relative;
-		&::after {
-			content: "";
-			position: absolute;
-			top: 32px;
-			left: 32px;
-			height: 48px;
-			width: 48px;
-			background-image: url(../images/icon/category-1.svg);
-		}
-		&::before {
-			content: "";
-			position: absolute;
-			top: 32px;
-			left: 32px;
-			height: 48px;
-			width: 48px;
-			background-color: #fbf6ea;
-			border-radius: 5px;
-		}
-		&:hover {
-			box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
-			border: none;
-		}
-	}
-	&__content-item--2 {
-		position: relative;
-		&::after {
-			content: "";
-			position: absolute;
-			top: 44px;
-			left: 44px;
-			height: 23px;
-			width: 23px;
-			background-image: url(../images/icon/category-2.svg);
-		}
-	}
-	&__content-item--3 {
-		position: relative;
-		&::after {
-			content: "";
-			position: absolute;
-			top: 30px;
-			left: 30px;
-			height: 48px;
-			width: 48px;
-			background-image: url(../images/icon/category-3.svg);
-		}
-	}
-	&__content-item--4 {
-		position: relative;
-		&::after {
-			content: "";
-			position: absolute;
-			top: 30px;
-			left: 30px;
-			height: 48px;
-			width: 48px;
-			background-image: url(../images/icon/category-4.svg);
-		}
-	}
-	&__content-item--color {
-		background-color: #ffd050;
-		border: none;
-	}
-	&__item-title {
-		letter-spacing: -1px;
-		padding-bottom: 5px;
-	}
-	&__item-text {
-		color: #6d6e76;
-		line-height: 28px;
-		max-width: 232px;
-	}
-}
-.started {
-	padding-bottom: 130px;
-	&__inner {
-		display: flex;
-		position: relative;
-		img {
-			width: 949px;
-			height: 705px;
-			object-fit: cover;
-		}
-	}
-	&__content {
-		padding: 80px;
-		width: 706px;
-		height: 585px;
-		background-color: #fff;
+	&__slider-btn {
+		border: 3px solid #979797;
+		padding: 15px 85px;
+		font-family: "Koulen";
+		font-size: 2.25rem;
+		line-height: 65px;
+		letter-spacing: 8px;
+		color: #7a797a;
 		position: absolute;
-		right: 0;
-		bottom: 0;
-	}
-	&__title {
-		letter-spacing: -2px;
-		padding-bottom: 15px;
-	}
-	&__subtitle {
-		letter-spacing: 3px;
-		text-transform: uppercase;
-		font-family: "Inter-Medium";
-		padding-bottom: 24px;
-		font-weight: 600;
-	}
-	&__text {
-		color: #6d6e76;
-		line-height: 28px;
-		padding-bottom: 50px;
-	}
-	&__btn {
-		@extend %btn;
-	}
-}
-.authors {
-	padding-bottom: 100px;
-	&__title {
-		text-align: center;
-		padding-bottom: 50px;
-	}
-	&__content {
-		display: flex;
-		justify-content: space-between;
-		gap: 30px;
-	}
-	&__item {
-		text-align: center;
-		width: 300px;
-		height: 325px;
-		background-color: #f4f4f4;
-		img {
-			height: 200px;
-			width: 150px;
+		&::after {
+			content: "";
+			position: absolute;
+			right: -120px;
+			top: 30px;
+			background-image: url(../images/icon/arrow.svg);
+			width: 71px;
+			height: 35px;
 		}
 		&:hover {
-			box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+			-webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
 		}
 	}
-	&__item--color {
-		background-color: #fbf6ea;
-	}
-	&__img {
-		padding-bottom: 20px;
-		padding-top: 40px;
-		border-radius: 50%;
-	}
-	&__name {
-		letter-spacing: -1px;
-	}
-	&__job {
-		color: #6d6e76;
-		padding-top: 5px;
-		padding-bottom: 20px;
-	}
-	&__list {
-		display: flex;
-		justify-content: center;
-		gap: 20px;
-		padding-bottom: 40px;
-	}
-	&__list-link {
+}
+.social-list {
+	padding-top: 470px;
+	padding-left: 45px;
+	&__item {
+		& + .social-list__item {
+			padding-top: 25px;
+		}
 		&:hover {
 			path {
-				fill: rgb(158, 101, 211);
+				fill: #aca9a9;
 			}
 		}
 	}
 }
-.partners {
-	padding-bottom: 100px;
-	&__content {
-		padding: 0 15px;
-		display: flex;
-	}
-	&__list {
-		display: flex;
-		align-items: center;
-	}
-	&__item {
-		padding-left: 75px;
-	}
-	&__text {
-		color: #6d6e76;
-		opacity: 0.6;
-	}
-	&__title {
-		color: #6d6e76;
-	}
-}
-.testimonials {
-	padding-bottom: 100px;
-	&__inner {
-		padding-top: 90px;
-		display: flex;
-		background-color: #fbf6ea;
-	}
-	&__blog {
-		padding-left: 110px;
-		padding-right: 80px;
-		margin-right: 95px;
-		position: relative;
-		&::after {
-			content: "";
-			position: absolute;
-			right: 0;
-			top: -10px;
-			height: 310px;
-			width: 1px;
-			background-color: rgba(109, 110, 118, 0.4);
-		}
-	}
-	&__subtitle {
-		letter-spacing: 3px;
-		text-transform: uppercase;
-		color: #232536;
-		font-weight: 600;
-		padding-bottom: 12px;
-	}
-	&__title {
-		padding-bottom: 15px;
-		max-width: 345px;
-	}
-	&__text {
-		line-height: 28px;
-		color: #232536;
-		width: 350px;
-		padding-bottom: 170px;
-	}
-	&__slider-item {
-		position: relative;
-		max-width: 500px;
-	}
-	&__slider-title {
-		padding-bottom: 120px;
-		max-width: 469px;
-	}
-	&__slider-box {
-		display: flex;
-		margin: 0;
-		max-width: 300px;
-	}
-	&__slider-img {
-		padding-right: 16px;
-		border-radius: 50%;
-	}
-	&__slider-location {
-		color: #6d6e76;
-	}
-}
-.slick-slider {
-	width: 550px;
-}
-.slick-arrow {
-	position: relative;
-	font-size: 0px;
-	&::before {
-		content: "";
-		position: absolute;
-		width: 62px;
-		height: 62px;
-		right: -40px;
-		bottom: -40px;
-		background-color: #b687ca;
-		border-radius: 50%;
-	}
+.slick-prev {
+	font-size: 0;
 }
 .slick-next {
 	position: absolute;
-	bottom: 50px;
 	right: 0;
+	top: 0;
+	font-size: 0;
+	bottom: 370px;
 	&::after {
 		content: "";
 		position: absolute;
-		left: -2px;
-		top: -2px;
-		width: 24px;
-		height: 21px;
-		background-image: url(../images/icon/right.svg);
+		background-image: url(../images/icon/right-arrow.svg);
+		left: -60px;
+		width: 38px;
+		height: 70px;
 	}
 }
-.slick-prev {
+.slick-dots {
 	position: absolute;
-	bottom: 50px;
-	right: 70px;
-	&::after {
-		content: "";
-		position: absolute;
-		left: -2px;
-		top: 2px;
-		width: 24px;
-		height: 21px;
-		background-image: url(../images/icon/right.svg);
-		transform: rotate(180deg);
-	}
-}
-
-.slick-disabled {
-	&::before {
-		content: "";
-		position: absolute;
-		width: 42px;
-		height: 42px;
-		right: -30px;
-		bottom: -30px;
+	right: 160px;
+	bottom: 400px;
+	display: flex;
+	button {
+		font-size: 0;
+		width: 125px;
+		height: 2px;
 		background-color: #fff;
-		border-radius: 50%;
+		opacity: 0.6;
 	}
 }
-.team {
-	padding-bottom: 140px;
-	&__inner {
+.slick-active {
+	button {
+		width: 126px;
+		height: 4px;
+		background-color: #fff;
+		opacity: 1;
+	}
+}
+.vases {
+	margin-top: 530px;
+	&__content {
+		display: flex;
+		gap: 10px;
+	}
+	&__content-title {
+		writing-mode: vertical-lr;
+		text-orientation: upright;
+		padding-left: 160px;
+		padding-right: 15px;
+		font-family: "Roboto";
+		font-size: 3rem;
+		line-height: 115.3%;
+		letter-spacing: 10.6667px;
+		color: #7a797a;
+	}
+	&__content-images{
+		height: auto;
+		width: 100%;
+	}
+	&__content-text{
+		padding-top: 25px;
+		font-family: "Mukta Vaani";
+		font-size: 24px;
+		line-height: 35px;
 		text-align: center;
+		color: #4a4a4a;
+		margin: auto;
 	}
-	&__title {
-		max-width: 415px;
-		margin: 0 auto;
-		padding-bottom: 15px;
+	&__content-text--narrow {
+		max-width: 280px;
 	}
-	&__text {
-		color: #6d6e76;
-		max-width: 405px;
-		margin: 0 auto;
-		line-height: 28px;
-		padding-bottom: 32px;
+	&__content-text--wide{
+		max-width: 410px;
 	}
-	&__btn{
-		@extend %btn;
+	&__footer{
+		display: flex;
+	}
+	&__footer-images{
+		padding-top: 100px;
+		margin-left: -200px;
+	}
+	.potted__slider-button{
+		margin-top: 110px;
+		padding-bottom: 180px;
+		padding-left: 500px;
 	}
 }
